--- a/Main/Home.html
+++ b/Main/Home.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../CSS/nav.css">
 
     <!-- JQ -->
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- 제이쿼리 불러오기 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
