--- a/Main/Home.html
+++ b/Main/Home.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../CSS/nav.css">
 
     <!-- JQ -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <!-- 제이쿼리 불러오기 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -59,7 +59,7 @@
 
 
 <div style="position: sticky">
-    <video autoplay loop muted id="bgvid" style="width:100%;position:fixed;top:0px;left:0px;">
+    <video autoplay loop muted id="bgvid">
         <source src="../image/민수.mp4" type="video/mp4">
     </video>
 
@@ -107,7 +107,7 @@
     <hr>
     <div id="vision-space">
         <div id="vision-text">
-            <h5>VISION</h5>
+            <h5>VISION</h5> 
             <p>팀원 모두가 소통하며 <br>
                 성장하는 자율적 성장 플랫폼</p>
         </div>
